--- a/myapplication/src/main/AndroidManifest.xml
+++ b/myapplication/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.contentprovider">
-
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    package="com.example.myapplication">
 
     <application
         android:allowBackup="true"
@@ -13,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".MainActivity2">
+        <activity android:name=".Activity3_test" android:launchMode="singleTask"></activity>
+        <activity android:name=".Activity2_test" android:launchMode="singleTask"/>
+        <activity android:name=".Activity1_test" android:launchMode="singleTask">
 
-        </activity>
-        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
