--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
+include ':myapplication'
 include ':contentprovider'
 include ':broadcast'
 include ':viewpager2'
 include ':lifecycle'
-include ':thread'
+include ':service'
 include ':fruitapplication'
-include ':application2'
 include ':application1'
 include ':app2'
 include ':app'
